<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="44dp"
    android:paddingTop="60dp"
    android:paddingEnd="44dp"
    tools:context=".presentation.fragments.FragmentSignIn">


    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/welcome_back_text"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSignin"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_horizontal"
            android:hint="@string/first_name_hint"
            android:inputType="textCapWords"
            android:textColorHint="@color/auth_hint_color"
            android:textFontWeight="500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/teal_200"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/auth_hint_color"
            android:textFontWeight="500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/ripple_effect_main_buttons"
        android:elevation="0dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white_button_color"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:paddingStart="40dp"
        android:paddingTop="8dp"
        android:paddingEnd="40dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/sign_in_with_google_text"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="12sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:paddingStart="40dp"
        android:paddingTop="8dp"
        android:paddingEnd="40dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_apple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/sign_in_with_apple_text"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>