<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.UserInformationFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toTopOf="@+id/guidelineToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="Profile"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userPhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineToolbar"
        app:shapeAppearanceOverlay="@style/RoundImage"
        app:strokeColor="#C0C0C0"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/changePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/chsnge_photo_text"
        android:textColor="@color/grey_font"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/userPhoto"
        app:layout_constraintStart_toStartOf="@+id/userPhoto"
        app:layout_constraintTop_toBottomOf="@+id/userPhoto" />

    <TextView
        android:id="@+id/userNameTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#3F3F3F"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePhoto"
        tools:text="Satria Adhi Pradana" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_upload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_effect_main_buttons"
        android:drawableStart="@drawable/upload_image"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/upload_item_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextVIew" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_upload">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trade_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/tradeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/trade_store_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tradeImage"
                app:layout_constraintStart_toEndOf="@+id/tradeImage"
                app:layout_constraintTop_toTopOf="@+id/tradeImage" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewTrade"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/paymentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/payment_method_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/paymentImage"
                app:layout_constraintStart_toEndOf="@+id/paymentImage"
                app:layout_constraintTop_toTopOf="@+id/paymentImage" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewPayment"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/balanceImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/balance_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/balanceImage"
                app:layout_constraintStart_toEndOf="@+id/balanceImage"
                app:layout_constraintTop_toTopOf="@+id/balanceImage" />

            <TextView
                android:id="@+id/textBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/balance_count_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/historyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/trade_history_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/historyImage"
                app:layout_constraintStart_toEndOf="@+id/historyImage"
                app:layout_constraintTop_toTopOf="@+id/historyImage" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewHistory"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/restoreImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_restore"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRestore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/restore_purchase_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/restoreImage"
                app:layout_constraintStart_toEndOf="@+id/restoreImage"
                app:layout_constraintTop_toTopOf="@+id/restoreImage" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewRestore"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/helpImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/help_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/helpImage"
                app:layout_constraintStart_toEndOf="@+id/helpImage"
                app:layout_constraintTop_toTopOf="@+id/helpImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="10dp"
            tools:layout_editor_absoluteY="336dp">

            <ImageView
                android:id="@+id/imageLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/log_out_text"
                android:textColor="#040402"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageLogout"
                app:layout_constraintStart_toEndOf="@+id/imageLogout"
                app:layout_constraintTop_toTopOf="@+id/imageLogout" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>